--- a/basiswebsite/styles/style.css
+++ b/basiswebsite/styles/style.css
@@ -1,13 +1,15 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
 body {
     font-family: "Poppins", sans-serif;
-    --color1: #FFF ;
-    --color2: #181818 ;
+    --color1: #FFF;
+    --color2: #181818;
 }
+
 .nav-bar {
     width: 100%;
     display: flex;
@@ -20,15 +22,15 @@ body {
 }
 
 .logo img {
-	width: 20em;
+    width: 20em;
 }
 
 .menu {
-	display: flex;
+    display: flex;
 }
 
 .menu li {
-	padding: 20px;
+    padding: 20px;
 }
 
 .menu li a {
@@ -54,8 +56,12 @@ body {
     transition: 0.15s ease-in-out;
 }
 
-.menu li a:hover:after {width: 100%;}
-.open-menu , .close-menu {
+.menu li a:hover:after {
+    width: 100%;
+}
+
+.open-menu,
+.close-menu {
     position: absolute;
     color: var(--color1);
     cursor: pointer;
@@ -74,8 +80,11 @@ body {
     right: 20px;
 }
 
-#check {display: none;}
-@media(max-width: 1400px){
+#check {
+    display: none;
+}
+
+@media(max-width: 1400px) {
     .menu {
         flex-direction: column;
         align-items: center;
@@ -89,26 +98,33 @@ body {
         background-color: var(--color2);
         transition: all 0.2s ease-in-out;
     }
-    .menu li {margin-top: 40px;}
-    .menu li a {padding: 10px;}
-    .open-menu , .close-menu {display: block;}
-    #check:checked ~
- .menu {right: 0;}
+
+    .menu li {
+        margin-top: 40px;
+    }
+
+    .menu li a {
+        padding: 10px;
+    }
+
+    .open-menu,
+    .close-menu {
+        display: block;
+    }
+
+    #check:checked~.menu {
+        right: 0;
+    }
 }
 
 .voorpagina {
-	display: grid;
-	background-image: url(../images/18fc4-slider-bg-1.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	grid-template-rows: 50% 50%;
-}
-
-.voorpagina {
-	display: grid;
-	color: whitesmoke;
-	grid-template-columns: 50% 50%;
-	grid-template-rows: 1fr;
+    display: grid;
+    background-image: url(../images/18fc4-slider-bg-1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: whitesmoke;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: 45vw;
 }
 
 .tekstvoorpagina a {
@@ -118,53 +134,51 @@ body {
 }
 
 .tekstvoorpagina {
-	grid-area: 1 / 1;
-	padding: 10vw;
+    grid-area: 1 / 1;
+    padding: 10vw;
 }
 
 .tekstvoorpagina h1 {
-	font-size: 3vw;
+    font-size: 3vw;
 }
 
 .tekstvoorpagina p {
-	font-size: 1vw;
+    font-size: 1vw;
     margin-bottom: 4em;
 }
 
 .plaatjesvoorpagina {
-	grid-area: 1 / 2;
+    grid-area: 1 / 2;
 }
 
 .plaatjesvoorpagina img {
-	display: grid;
-	grid-template-columns:  50vw;
-	grid-template-rows: 50vw;
+    display: grid;
     margin: 5vw;
 }
 
 .monitor {
-	grid-area: 1 / 2 / 1 / 2;
-	width: 30vw;
+    grid-area: 1 / 2 / 1 / 2;
+    width: 30vw;
 }
 
 .search {
-	grid-area: 1 / 2 / 1 / 2;
+    grid-area: 1 / 2 / 1 / 2;
 }
 
 .paper {
-	grid-area: 1 / 2 / 1 / 2;
+    grid-area: 1 / 2 / 1 / 2;
 }
 
 .cloud {
-	grid-area: 1 / 2 / 1 / 2;
+    grid-area: 1 / 2 / 1 / 2;
 }
 
 .levelup {
-	grid-area: 1 / 2 / 1 / 2;
+    grid-area: 1 / 2 / 1 / 2;
 }
 
 .speaker {
-	grid-area: 1 / 2 / 1 / 2;
+    grid-area: 1 / 2 / 1 / 2;
 }
 
 .info {
@@ -173,7 +187,7 @@ body {
     grid-template-rows: 20em 20em 20em;
     margin-top: 5vw;
     margin-bottom: 15vw;
-	margin-left: 10vw;
+    margin-left: 10vw;
     margin-right: 10vw;
     font-size: 20px;
 }
@@ -181,10 +195,10 @@ body {
 .info img {
     display: grid;
     margin-left: 15vw;
-    grid-column-start: 2 ;
-    grid-column-end: 3 ;
-    grid-row-end: 2 ;
-    grid-row-end: 3 ;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-end: 2;
+    grid-row-end: 3;
     width: 24vw;
 }
 
@@ -199,68 +213,158 @@ body {
 
 .info1 {
     display: grid;
-    grid-column-start: 1 ;
-    grid-column-end: 2 ;
-    grid-row-end: 1 ;
-    grid-row-end: 2 ;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 1;
+    grid-row-end: 2;
     margin: 1vw;
 }
 
 .info2 {
     display: grid;
-    grid-column-start: 1 ;
-    grid-column-end: 2 ;
-    grid-row-end: 2 ;
-    grid-row-end: 3 ;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 2;
+    grid-row-end: 3;
     margin: 1vw;
 }
 
 .info3 {
     display: grid;
-    grid-column-start: 1 ;
-    grid-column-end: 2 ;
-    grid-row-end: 3 ;
-    grid-row-end: 4 ;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 3;
+    grid-row-end: 4;
     margin: 1vw;
 }
 
+form {
+    display: flex;
+    justify-content: center;
+    color: white;
+    padding-top: 3em;
+    padding-bottom: 1em;
+}
+
 .form {
-	background-color: darkblue;
-	color: white;
-	padding-top: 3em;
-	padding-bottom: 1em;
+    background-image: url(../images/slider2.jpeg) ;
+    color: white;
+    padding-top: 5em;
+    padding-bottom: 5em;
+}
+
+.form input {
+    font-family: "Poppins", sans-serif;
+    color: #181818;
+    padding: 15px;
 }
 
 .form h3 {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 0.5em;
+    text-align: center;
+    font-size: 30px;
 }
 
 .form h4 {
-	display: flex;
-	justify-content: center;
+    text-align: center;
+    font-size: 20px;
 }
 
-.form a {
-	display: flex;
-	justify-content: center;
-	margin-top: 1em;
-	margin-bottom: 2em;
+form a {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    padding: 20px;
+    background-color: #181818;
 }
 
 .diensten {
-	margin: 1em;
+    margin: 1em;
 }
 
 .werkproces {
-	margin: 1em;
+    margin: 1em;
 }
 
 footer {
-	margin: 1em;
+    margin: 1em;
 }
 
 footer ul {
-	list-style: none;
+    list-style: none;
+}
+
+/******************** .voorpagina ********************/
+
+@media (max-width: 900px) {
+    .voorpagina h1 {
+        font-size: 20px;
+        margin-bottom: 0.8em;
+    }
+
+    .voorpagina a {
+        font-size: 10px;
+        padding: 12px;
+    }
+
+    .voorpagina {
+        height: 25em;
+    }
+}
+
+@media (max-width: 1100px) {
+    .voorpagina p {
+        font-size: 14px;
+    }
+}
+
+/******************** h2 .info ********************/
+
+@media (max-width: 1000px) {
+    .info h2 {
+        font-size: 18px;
+    }
+}
+
+/******************** p .info ********************/
+
+@media (max-width: 1000px) {
+    .info p {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 1300px) {
+    .info p {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 700px) {
+    .info p {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 450px) {
+    .info p {
+        font-size: 11px;
+    }
+}
+
+/******************** form ********************/
+
+@media (max-width: 900px) {
+    h3 {
+        font-size: 5px;
+    }
+
+    input {
+        width: 120px;
+    }
+
+    form a {
+        font-size: 12px;
+        padding: 20px;
+    }
 }
