--- a/basiswebsite/styles/style.css
+++ b/basiswebsite/styles/style.css
@@ -1,3 +1,5 @@
+
+/******************** body ********************/
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,7 +11,11 @@ body {
     --color1: #FFF;
     --color2: #181818;
 }
+/******************** body ********************/
 
+/******************************************************/
+/******************** header + nav ********************/
+/******************************************************/
 .nav-bar {
     width: 100%;
     display: flex;
@@ -116,7 +122,13 @@ body {
         right: 0;
     }
 }
+/******************************************************/
+/******************** header + nav ********************/
+/******************************************************/
 
+/******************************************************/
+/******************** voorpagina **********************/
+/******************************************************/
 .voorpagina {
     display: grid;
     background-image: url(../images/18fc4-slider-bg-1.jpg);
@@ -125,6 +137,11 @@ body {
     color: whitesmoke;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-rows: 45vw;
+}
+
+.voorpagina a {
+    color: white;
+    text-decoration: none;
 }
 
 .tekstvoorpagina a {
@@ -180,7 +197,13 @@ body {
 .speaker {
     grid-area: 1 / 2 / 1 / 2;
 }
+/******************************************************/
+/******************** voorpagina **********************/
+/******************************************************/
 
+/******************************************************/
+/******************** info ****************************/
+/******************************************************/
 .info {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -237,7 +260,13 @@ body {
     grid-row-end: 4;
     margin: 1vw;
 }
+/******************************************************/
+/******************** info ****************************/
+/******************************************************/
 
+/******************************************************/
+/******************** form ****************************/
+/******************************************************/
 form {
     display: flex;
     justify-content: center;
@@ -277,15 +306,53 @@ form a {
     padding: 20px;
     background-color: #181818;
 }
+/******************************************************/
+/******************** form ****************************/
+/******************************************************/
 
+
+/******************************************************/
+/******************** diensten ****************************/
+/******************************************************/
 .diensten {
+    margin-top: 2em;
+    margin-bottom: 2em;
+    text-align: center;
+}
+
+.diensten ul {
+    display: grid;
+    grid-template-columns:  10em 10em 10em;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 10px;
+    row-gap: 10px;
+    list-style: none;
     margin: 1em;
 }
 
+.diensten li {
+   padding: 1em;
+   background-color: rgb(203, 180, 255);
+}
+/******************************************************/
+/******************** diensten ****************************/
+/******************************************************/
+
+
+/******************************************************/
+/******************** werkproces ****************************/
+/******************************************************/
 .werkproces {
     margin: 1em;
 }
+/******************************************************/
+/******************** werkprces ****************************/
+/******************************************************/
 
+
+/******************************************************/
+/******************** footer ****************************/
+/******************************************************/
 footer {
     margin: 1em;
 }
@@ -293,9 +360,14 @@ footer {
 footer ul {
     list-style: none;
 }
+/******************************************************/
+/******************** footer ****************************/
+/******************************************************/
 
-/******************** .voorpagina ********************/
 
+/*****************************************************/
+/********************** media **********************/
+/*****************************************************/
 @media (max-width: 900px) {
     .voorpagina h1 {
         font-size: 20px;
@@ -368,3 +440,6 @@ footer ul {
         padding: 20px;
     }
 }
+/*****************************************************/
+/********************** media **********************/
+/*****************************************************/
